--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
 
     <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <!-- Bluetooth permissions -->
     <uses-permission android:name="android.permission.BLUETOOTH"
@@ -35,6 +36,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PeciMobileApp">
 
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
         <!-- FileProvider moved inside application tag -->
         <provider
             android:name="androidx.core.content.FileProvider"
