--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:usesPermissionFlags="neverForLocation"
         tools:targetApi="s" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
 
     <!-- Declare that your app is available to BLE-capable devices -->
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true" />
@@ -36,7 +37,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PeciMobileApp">
 
-        <service android:name="org.eclipse.paho.android.service.MqttService" />
+        <service android:name="org.eclipse.paho.android.service.MqttService"
+            tools:ignore="MissingClass" />
         <!-- FileProvider moved inside application tag -->
         <provider
             android:name="androidx.core.content.FileProvider"
