--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.8.0"
+agp = "8.8.2"
 kotlin = "2.0.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -14,6 +14,8 @@ compose-material3 = "1.0.0"
 mqtt = "1.2.5"
 navigationCompose = "2.8.9"
 appcompat = "1.7.0"
+opencvAndroid = "4.5.5"
+opencvImg = "1.0.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -35,6 +37,8 @@ androidx-compose-material3 = { group = "androidx.compose.material3", name = "mat
 mqtt-client = { group = "org.eclipse.paho", name = "org.eclipse.paho.client.mqttv3", version.ref = "mqtt" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+opencv-android = { group = "org.opencv", name = "opencv-android", version = "4.5.5" }
+opencv-img = { module = "org.demen.android.opencv:opencv-img", version.ref = "opencvImg" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
