validação de grupo com debounce funcionando, aula em grupo funciona porém não mostra nome dos participantes apenas user_id

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.PeciMobileApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
